--- a/package.json
+++ b/package.json
@@ -2,13 +2,23 @@
   "name": "uactor-client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@msgpack/msgpack": "^2.7.0",
+    "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.6",
+    "axios": "^0.21.1",
+    "blake2": "^4.0.2",
+    "js-yaml": "^4.1.0",
+    "luamin": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
