--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@msgpack/msgpack": "^2.7.0",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -19,6 +20,8 @@
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
