--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ace-builds": "^1.4.12",
     "antd": "^4.16.6",
     "axios": "^0.21.1",
     "blake2": "^4.0.2",
+    "fs": "0.0.1-security",
     "js-yaml": "^4.1.0",
+    "list-files": "^1.1.4",
     "luamin": "^1.0.4",
+    "node-dir": "^0.1.17",
     "react": "^17.0.2",
+    "react-ace": "^9.4.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
+    "terminal-in-react": "^4.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
